--- a/destroy.yml
+++ b/destroy.yml
@@ -24,3 +24,13 @@
          scopes:
            - https://www.googleapis.com/auth/compute
      tags: delete
+   - name: delete a address
+     gcp_compute_address:
+         name: 'free-address-instance'
+         region: "{{ region }}"
+         project: "{{ project_id }}"
+         auth_kind: "{{ auth }}"
+         service_account_file: "{{ credentials_file }}"
+         scopes:
+           - https://www.googleapis.com/auth/compute
+         state: absent
